# codavatarAssignments

Favourite_food/: index.html
blogApp/: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
blogApp/alembic/: env.py
blogApp/alembic/versions/: 0ff4cfb6f296_initial_migration_users_blogs_comments_.py
blogApp/app/: auth.py  cache.py  database.py  email_service.py  graphql_schema.py  main.py  redis_client.py  utils.py
blogApp/app/models/: __init__.py  blog.py  comment.py  likes.py  user.py
blogApp/app/routers/: blog.py  comments.py  likes.py
blogApp/app/schemas/: __init__.py  auth.py  blog.py  comment.py
blogApp/docs/: EMAIL_NOTIFICATION_SETUP_GUIDE.md
blogApp/scripts/: seed_demo_data.py
calculator/: index.html  script.js  styles.css
eventFinder/eventful/: index.html  package-lock.json  package.json
eventFinder/eventful/src/: App.tsx  main.tsx
eventFinder/eventful/src/components/: BottomNav.tsx  CategoryPills.tsx  EventCard.tsx  EventMap.tsx  FilterBar.tsx  NotificationBell.tsx  RegistrationModal.tsx  SaveButton.tsx  SearchBar.tsx  TopNav.tsx  ViewToggle.tsx
eventFinder/eventful/src/context/: AppProviders.tsx  AuthContext.tsx  EventContext.tsx  NotificationContext.tsx  ToastContext.tsx
eventFinder/eventful/src/data/: mockData.ts
eventFinder/eventful/src/hooks/: useFilteredEvents.ts  useNotificationTrigger.ts
eventFinder/eventful/src/pages/: CreateEventPage.tsx  (+12 more)
googleLookalike/: index.html  styles.css
learnReact/my-react-app/: index.html  package-lock.json
learnReact/my-react-app/src/: App.jsx  main.jsx
(+14 files in other folders)
